add invited talks

--- a/index.html
+++ b/index.html
@@ -206,17 +206,18 @@
                   <heading>News</heading>
                   <p>
                   <ul>
+                    <li> 02/2023: I am glad to give talks about efficient and sparse continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a> </b> and <b> <a href="https://www.aitime.cn/">AI Time</a> </b> </li>
                     <li> 10/2022: I received the <b> Scholar Award for NeurIPS 2022 </b>  </li>
                     <li> 09/2022: Our paper on efficient continual learning is accepted at <b> NeurIPS 2022 </b>  </li>
-                    <li> 09/2022: I gave a talk about prompting-based continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a></b></li>
+                    <li> 09/2022: I am glad to give a talk about prompting-based continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a></b></li>
                     <li> 09/2022: Our paper on adversarially robust pruning is accepted at <b> ICDM 2022 </b> </li>
                     <li> 07/2022: Our paper on prompting-based continual learning is accepted at <b> ECCV 2022 </b> </li>
                     <li> 03/2022: Our paper on prompting-based continual learning is accepted at <b> CVPR 2022 </b> </li>
                     <li> 02/2022: Our paper on Bayesian continual learning is accepted by <b> Neural Networks </b> </li>
-                    <li> 09/2021: Our paper on HSIC for adversarial robustness is accepted at <b> NeurIPS 2021 </b>  </li>
-                    <li> 09/2021: Our paper on deep learning for smoking prediction is accepted by <b> PLOS Computational Biology </b>  </li>                
+                    <li> 09/2021: Our paper on HSIC for adversarial robustness is accepted at <b> NeurIPS 2021 </b>  </li>               
                     <li> <a href="javascript:toggle_vis('news')">Earlier news</a> </li>
                     <div id="news" style="display:none">
+                      <li> 09/2021: Our paper on deep learning for smoking prediction is accepted by <b> PLOS Computational Biology </b>  </li>
                       <li> 05/2021: I started my research internship at <b> <a href="https://research.google/teams/cloud-ai/">Google Cloud AI Research</a>  </b> </li>
                       <li> 09/2020: Our paper on feature grouping is accepted at <b> NeurIPS 2021 </b>  </li>
                       <li> 08/2020: Two papers on continual learning and open-world class discovery are accepted at <b> ICDM 2020 </b>, with one selected as <b> <font color=red> the best paper candidate </font> </b> </li>
@@ -594,24 +595,25 @@
                   <heading>Invited Talks</heading>
                   <ul>
                     <li>
+                      <papertitle>Sparse Continual Learning on the Edge</papertitle><br />
+                      <em>- <a href="https://www.continualai.org/">ContinualAI</a>, 2023, Remote <br/>
+                      <em>- <a href="http://www.aitime.cn/">AI Time</a>, 2023, Remote (Chinese
+                          version) </em>
+                    <li>
                       <papertitle>Prompting-based Continual Learning</papertitle><br />
-                      <em><a href="https://theaitalks.org/">AI Talks SG</a>, 2022, Remote </em><br />
+                      <em>- <a href="https://theaitalks.org/">AI Talks SG</a>, 2022, Remote </em><br />
+                      <em>- <a href="https://www.continualai.org/">ContinualAI</a>, 2022, Remote </em>[<a href="https://www.youtube.com/watch?v=19bylhGhfAw&list=PLm6QXeaB-XkBMFxvgZvYjqhaPgGg8Um9Z&index=1">recording</a>]
                     <li>
                       <papertitle>Revisiting Hilbert-Schmidt Information Bottleneck for Adversarial Robustness
                       </papertitle><br />
-                      <em><a href="https://meetings.informs.org/wordpress/indianapolis2022/">INFORMS Annual Meeting</a>,
-                        2022, Indianapolis, Indiana</em><br />
-                      [<a href="https://www.abstractsonline.com/pp8/#!/10693/presentation/4612">abstract</a>]
-                      <li>
-                        <papertitle>Prompting-based Continual Learning</papertitle><br />
-                        <em><a href="https://www.continualai.org/">ContinualAI</a>, 2022, Remote </em><br />
-                        [<a href="https://www.youtube.com/watch?v=19bylhGhfAw&list=PLm6QXeaB-XkBMFxvgZvYjqhaPgGg8Um9Z&index=1">recording</a>]
-                    <li>
-                      <papertitle>Revisiting Hilbert-Schmidt Information Bottleneck for Adversarial Robustness (Chinese
-                        version)</papertitle><br />
-                      <em><a href="http://www.aitime.cn/">AI Time</a>, 2022, Remote<br /></em>
+                      <em>- <a href="https://meetings.informs.org/wordpress/indianapolis2022/">INFORMS Annual Meeting</a>,
+                        2022, Indianapolis, Indiana</em> [<a href="https://www.abstractsonline.com/pp8/#!/10693/presentation/4612">abstract</a>]<br/>
+                      <em>- <a href="http://www.aitime.cn/">AI Time</a>, 2022, Remote (Chinese
+                        version) </em>
                       [<a href="https://www.koushare.com/video/videodetail/24409">recording</a>][<a
                         href="http://www.aitime.cn/Activity/activityDetail?id=359">blog</a>]
+                    
+                      
                   </ul>
                 </td>
               </tr>
