--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   <p>
                   <ul>
                     <li> Continual (Lifelong) learning </li>
-                    <li> Data-efficient and parameter-efficient learning </li>
+                    <li> Data and parameter efficient learning for large language models</li>
                     <li> Open set recognition / novel class discovery </li>
                     <li> Adversarial robustness and model compression </li>
                     <li> Deep learning applications in computer vision, natural language understanding, document
