--- a/index.html
+++ b/index.html
@@ -273,6 +273,31 @@
 
             <tr>
               <td width="32%">
+                <img class="thumbnail" src="paper_images/queryform.png" data-id="qf-carousel"></img>
+                <div id="qf-carousel" class="carousel">
+                  <img class="img-center-carousel" src="paper_images/queryform.png" alt="">
+                  <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
+                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                </div>
+              </td>
+
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="">
+                  <papertitle>QueryForm: A Simple Zero-shot Form Entity Query Framework</papertitle>
+                </a>
+                <br>
+                <b>Zifeng Wang</b>, Zizhao Zhang, Jacob Devlin, Chen-Yu Lee, Guolong Su, Hao Zhang, Jennifer Dy, Vincent Perot, Tomas Pfister<br>
+                <em> arXiv, 2022. <br> </em>
+                [<a href="https://arxiv.org/pdf/2211.07730.pdf">paper</a>]
+                <br>
+                <p></p>
+                <p> QueryForm consists of a novel prompting-based framework for zero-shot document entity recognition with large language models (LLM), and
+                  a large-scale weakly-supervised pre-training method on publicly available webpages. </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="32%">
                 <img class="thumbnail" src="paper_images/sparcl.png" data-id="hbar-carousel"></img>
                 <div id="hbar-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/sparcl.png" alt="">
