--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   <p>
                   <ul>
                     <li> Continual (Lifelong) learning </li>
-                    <li> Data and parameter efficient learning for large language models</li>
+                    <li> Data and parameter efficient learning for large language models (LLMs)</li>
                     <li> Open set recognition / novel class discovery </li>
                     <li> Adversarial robustness and model compression </li>
                     <li> Deep learning applications in computer vision, natural language understanding, document
@@ -291,7 +291,7 @@
                 [<a href="https://arxiv.org/pdf/2211.07730.pdf">paper</a>]
                 <br>
                 <p></p>
-                <p> QueryForm consists of a novel prompting-based framework for zero-shot document entity recognition with large language models (LLM), and
+                <p> QueryForm consists of a novel prompting-based framework for zero-shot document entity recognition with large language models (LLMs), and
                   a large-scale weakly-supervised pre-training method on publicly available webpages. </p>
               </td>
             </tr>
