add ICML23 news

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
                   <heading>News</heading>
                   <p>
                   <ul>
+                    <li> 04/2023: Our paper on continual learning is accepted at <b> ICML 2023 </b>, paper and code will be released soon!  </li>
                     <li> 02/2023: I am glad to give talks about efficient and sparse continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a> </b> and <b> <a href="https://www.aitime.cn/">AI Time</a> </b> </li>
                     <li> 10/2022: I received the <b> Scholar Award for NeurIPS 2022 </b>  </li>
                     <li> 09/2022: Our paper on efficient continual learning is accepted at <b> NeurIPS 2022 </b>  </li>
