add new paper and award

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
                   <heading>News</heading>
                   <p>
                   <ul>
+                    <li> 04/2022: I received the <b> Outstanding Student Award in Research</b> from COE, Northeastern University </li>
                     <li> 04/2023: Our paper on continual learning is accepted at <b> ICML 2023 </b>, paper and code will be released soon!  </li>
                     <li> 02/2023: I am glad to give talks about efficient and sparse continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a> </b> and <b> <a href="https://www.aitime.cn/">AI Time</a> </b> </li>
                     <li> 10/2022: I received the <b> Scholar Award for NeurIPS 2022 </b>  </li>
@@ -214,10 +215,10 @@
                     <li> 09/2022: Our paper on adversarially robust pruning is accepted at <b> ICDM 2022 </b> </li>
                     <li> 07/2022: Our paper on prompting-based continual learning is accepted at <b> ECCV 2022 </b> </li>
                     <li> 03/2022: Our paper on prompting-based continual learning is accepted at <b> CVPR 2022 </b> </li>
-                    <li> 02/2022: Our paper on Bayesian continual learning is accepted by <b> Neural Networks </b> </li>
-                    <li> 09/2021: Our paper on HSIC for adversarial robustness is accepted at <b> NeurIPS 2021 </b>  </li>               
+                    <li> 02/2022: Our paper on Bayesian continual learning is accepted by <b> Neural Networks </b> </li>        
                     <li> <a href="javascript:toggle_vis('news')">Earlier news</a> </li>
                     <div id="news" style="display:none">
+                      <li> 09/2021: Our paper on HSIC for adversarial robustness is accepted at <b> NeurIPS 2021 </b>  </li> 
                       <li> 09/2021: Our paper on deep learning for smoking prediction is accepted by <b> PLOS Computational Biology </b>  </li>
                       <li> 05/2021: I started my research internship at <b> <a href="https://research.google/teams/cloud-ai/">Google Cloud AI Research</a>  </b> </li>
                       <li> 09/2020: Our paper on feature grouping is accepted at <b> NeurIPS 2021 </b>  </li>
@@ -294,6 +295,35 @@
                 <p></p>
                 <p> QueryForm consists of a novel prompting-based framework for zero-shot document entity recognition with large language models (LLMs), and
                   a large-scale weakly-supervised pre-training method on publicly available webpages. </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="32%">
+                <img class="thumbnail" src="paper_images/dualhsic.png" data-id="hbar-carousel"></img>
+                <div id="hbar-carousel" class="carousel">
+                  <img class="img-center-carousel" src="paper_images/dualhsic.png" alt="">
+                  <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
+                      data-carousel-id="hbar-carousel" class="carousel-close"></a>
+                </div>
+              </td>
+
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="">
+                  <papertitle>DualHSIC: HSIC-Bottleneck and Alignment for Continual Learning</papertitle>
+                </a>
+                <br>
+                <b>Zifeng Wang*</b>, Zheng Zhan*, Yifan Gong, Yucai Shao, Stratis Ioannidis, Yanzhi Wang, Jennifer Dy<br>
+                <em>International Conference on Machine Learning (<b>ICML</b>), 2023. <br> </em>
+                [paper and code to be released]
+                <!-- [<a href="https://arxiv.org/pdf/2209.09476.pdf">paper</a>] [<a
+                  href="https://github.com/neu-spiral/SparCL">code</a>] -->
+                <!-- [<a href="">paper</a>] [<a
+                  href="">code</a>] -->
+                <br>
+                <p></p>
+                <p> DualHSIC consists of two complementary components that stem from the Hilbert Schmidt independence criterion (HSIC): HSIC-Bottleneck for Rehearsal (HBR) lessens the inter-task 
+                  interference and HSIC Alignment (HA) promotes task-invariant knowledge sharing. </p>
               </td>
             </tr>
 
@@ -650,6 +680,7 @@
                 <td width="100%" valign="middle">
                   <heading>Awards</heading>
                   <ul>
+                    <li><text style="color:black">Outstanding Student Award in Research</text>, Northeastern University, 2023 <br />
                     <li><text style="color:black">Scholar Award</text>, NeurIPS 2022 <br />
                     <li><text style="color:black">Best Paper Candidate</text>, ICDM 2020 <br />
                     <li><text style="color:black">Best Paper Award</text>, DySPAN 2019 <br />
