add ACL acceptance

--- a/index.html
+++ b/index.html
@@ -206,18 +206,19 @@
                   <heading>News</heading>
                   <p>
                   <ul>
+                    <li> 05/2023: Our paper on document entity extraction is accepted at <b> ACL 2023 </b> (Findings)
                     <li> 04/2022: I received the <b> Outstanding Student Award in Research</b> from COE, Northeastern University </li>
-                    <li> 04/2023: Our paper on continual learning is accepted at <b> ICML 2023 </b>, paper and code will be released soon!  </li>
+                    <li> 04/2023: Our paper on continual learning is accepted at <b> ICML 2023 </b>, code will be released soon!  </li>
                     <li> 02/2023: I am glad to give talks about efficient and sparse continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a> </b> and <b> <a href="https://www.aitime.cn/">AI Time</a> </b> </li>
                     <li> 10/2022: I received the <b> Scholar Award for NeurIPS 2022 </b>  </li>
                     <li> 09/2022: Our paper on efficient continual learning is accepted at <b> NeurIPS 2022 </b>  </li>
                     <li> 09/2022: I am glad to give a talk about prompting-based continual learning at <b> <a href="https://www.continualai.org/">ContinualAI</a></b></li>
                     <li> 09/2022: Our paper on adversarially robust pruning is accepted at <b> ICDM 2022 </b> </li>
                     <li> 07/2022: Our paper on prompting-based continual learning is accepted at <b> ECCV 2022 </b> </li>
-                    <li> 03/2022: Our paper on prompting-based continual learning is accepted at <b> CVPR 2022 </b> </li>
-                    <li> 02/2022: Our paper on Bayesian continual learning is accepted by <b> Neural Networks </b> </li>        
+                    <li> 03/2022: Our paper on prompting-based continual learning is accepted at <b> CVPR 2022 </b> </li>       
                     <li> <a href="javascript:toggle_vis('news')">Earlier news</a> </li>
                     <div id="news" style="display:none">
+                      <li> 02/2022: Our paper on Bayesian continual learning is accepted by <b> Neural Networks </b> </li>
                       <li> 09/2021: Our paper on HSIC for adversarial robustness is accepted at <b> NeurIPS 2021 </b>  </li> 
                       <li> 09/2021: Our paper on deep learning for smoking prediction is accepted by <b> PLOS Computational Biology </b>  </li>
                       <li> 05/2021: I started my research internship at <b> <a href="https://research.google/teams/cloud-ai/">Google Cloud AI Research</a>  </b> </li>
@@ -289,7 +290,7 @@
                 </a>
                 <br>
                 <b>Zifeng Wang</b>, Zizhao Zhang, Jacob Devlin, Chen-Yu Lee, Guolong Su, Hao Zhang, Jennifer Dy, Vincent Perot, Tomas Pfister<br>
-                <em> arXiv, 2022. <br> </em>
+                <em> Findings of the Association for Computational Linguistics: <b>ACL</b> 2023 <br> </em>
                 [<a href="https://arxiv.org/pdf/2211.07730.pdf">paper</a>]
                 <br>
                 <p></p>
@@ -315,9 +316,7 @@
                 <br>
                 <b>Zifeng Wang*</b>, Zheng Zhan*, Yifan Gong, Yucai Shao, Stratis Ioannidis, Yanzhi Wang, Jennifer Dy<br>
                 <em>International Conference on Machine Learning (<b>ICML</b>), 2023. <br> </em>
-                [paper and code to be released]
-                <!-- [<a href="https://arxiv.org/pdf/2209.09476.pdf">paper</a>] [<a
-                  href="https://github.com/neu-spiral/SparCL">code</a>] -->
+                [<a href="https://arxiv.org/pdf/2305.00380.pdf">paper</a>] [code to be released]
                 <!-- [<a href="">paper</a>] [<a
                   href="">code</a>] -->
                 <br>
