--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
                   <heading>News</heading>
                   <p>
                   <ul>
+                    <li> 07/2023: I will be giving a talk on effective and efficient continual learning at <b> <a
+                      href="https://www.a-star.edu.sg/cfar/events/effective-and-efficient-continual-learning">A*STAR</a> </b>, thanks for hosting!
                     <li> 05/2023: Our paper on document entity extraction is accepted at <b> ACL 2023 </b> (Findings)
                     <li> 04/2022: I received the <b> Outstanding Student Award in Research</b> from COE, Northeastern
                       University </li>
