--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
                   <p style="text-align:center">
                     <name>Zifeng Wang</name>
                   </p>
-                  <p> I am a fifth-year PhD student in Machine Learning at <a
+                  <p> I am a research scientist at Google. I received my PhD in Machine Learning at <a
                       href="https://web.northeastern.edu/spiral/">SPIRAL Group</a>
                     from <a href="https://www.northeastern.edu/">Northeastern University</a>, advised by
                     Prof. <a href="http://www.ece.neu.edu/fac-ece/jdy/">Jennifer G. Dy</a>.
-                    I also work closely with Prof. <a href="https://ece.northeastern.edu/fac-ece/ioannidis/">Stratis
-                      Ioannidis</a>,
+                    During my PhD, I also work closely with Prof. <a href="https://ece.northeastern.edu/fac-ece/ioannidis/">Stratis
+                      Ioannidis</a>
                     and Prof. <a
                       href="https://web.northeastern.edu/yanzhiwang/#_ga=2.65760046.1809272488.1657261940-1545783568.1564022696">Yanzhi
                       Wang</a>.
-                    I also work as student researcher at <a href="https://research.google/teams/cloud-ai/">Google Cloud
+                    <!-- I also work as student researcher at <a href="https://research.google/teams/cloud-ai/">Google Cloud
                       AI Research</a>,
                     under the supervision of <a href="https://sites.google.com/view/zizhaozhang/home">Zizhao Zhang</a>,
                     <a href="https://chl260.github.io/">Chen-Yu Lee</a>, and <a href="https://tomas.pfister.fi/">Tomas
@@ -146,21 +146,21 @@
                     <a href="https://resnick.caltech.edu/people/xiaoqi-ren">Xiaoqi Ren</a>,
                     <a href="https://www.linkedin.com/in/hao-zhang-4a7aab56/">Hao Zhang</a> and
                     <a href="https://research.google/people/106320/">Jacob Devlin</a>.
-                  </p>
-                  <p> I received my BS degree in Electronic Engineering from <a
-                      href="http://www.tsinghua.edu.cn/publish/thu2018en/index.html">Tsinghua University</a>, Beijing.
-                    During my college years, I also worked with Prof. <a
+                  </p> -->
+                  I received my BS degree in Electronic Engineering from <a
+                      href="http://www.tsinghua.edu.cn/publish/thu2018en/index.html">Tsinghua University</a>.
+                    In my college years, I also worked with Prof. <a
                       href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a> (Tsinghua), Prof. <a
                       href="https://www.cs.princeton.edu/~jiadeng/">Jia Deng</a> (Princeton) on computer vision and
                     Prof. <a href="http://fi.ee.tsinghua.edu.cn/~liyong/">Yong Li</a> (Tsinghua) on big data.
-                  <p>
+                  <!-- <p>
                     <mark>
                       I am currently looking for full-time opportunities starting in 2023.
                     </mark>
-                  </p>
+                  </p> -->
 
                   <p style="text-align:center">
-                    <a href="mailto:zifengwang@ece.neu.edu">Email</a> &nbsp/&nbsp
+                    <a href="mailto:zifengw@google.com">Email</a> &nbsp/&nbsp
                     <a href="https://scholar.google.co.il/citations?user=N1uBekcAAAAJ&hl=en">Google Scholar</a>
                     &nbsp/&nbsp
                     <a href="https://www.linkedin.com/in/zifeng-wang-21b069b4/">LinkedIn</a> &nbsp/&nbsp
@@ -259,8 +259,12 @@
                   <heading>Experiences</heading>
                   <p>
                   <ul id="exp" style="list-style:none;">
+                    <li> <img class="school-logo" src="images/exp_logos/g.png">
+                      <div class="school-text">Aug 2023 - Present, Google, <br /> Research Scientist
+                        at <a href="https://research.google/teams/cloud-ai/">Cloud AI Research</a></div>
+                    </li>
                     <li> <img class="school-logo" src="images/exp_logos/NEU.jpeg">
-                      <div class="school-text">Sep 2018 - Present, Northeastern University, <br />Research assistant at
+                      <div class="school-text">Sep 2018 - July 2023, Northeastern University, <br />Research assistant at
                         <a href="https://web.northeastern.edu/spiral/">SPIRAL Group</a>
                       </div>
                     </li>
@@ -728,7 +732,7 @@
                 <td width="100%" valign="middle">
                   <heading>Academic Service</heading>
                   <p>
-                    <strong>Conference Reviewer</strong>: NeurIPS 21-22, ICML 21-23, ICLR 22-23, CVPR 22-23, ICCV 23,
+                    <strong>Conference Reviewer</strong>: NeurIPS 21-23, ICML 21-23, ICLR 22-23, CVPR 22-23, ICCV 23,
                     ACL ARR <br />
                     <strong>PC Member</strong>: SDM 23 <br />
                     <strong>Journal Reviewer</strong>: TPAMI, TMLR, Neural Networks
