add internship news

--- a/index.html
+++ b/index.html
@@ -153,14 +153,16 @@
                       href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a> (Tsinghua), Prof. <a
                       href="https://www.cs.princeton.edu/~jiadeng/">Jia Deng</a> (Princeton) on computer vision and
                     Prof. <a href="http://fi.ee.tsinghua.edu.cn/~liyong/">Yong Li</a> (Tsinghua) on big data.
-                  <!-- <p>
-                    <mark>
-                      I am currently looking for full-time opportunities starting in 2023.
-                    </mark>
-                  </p> -->
+                  <p>
+                    <!-- <mark> -->
+                      <b>
+                      I am looking for self-motivated student researchers / research interns with interests and expertise in LLMs! Feel free contact me if you would like to work on cutting-edge challenges in machine learning and LLMs.
+                      </b>
+                    <!-- </mark> -->
+                  </p>
 
                   <p style="text-align:center">
-                    <a href="mailto:zifengw@google.com">Email</a> &nbsp/&nbsp
+                    <a href="mailto:zifengwangking@gmail.com">Email</a> &nbsp/&nbsp
                     <a href="https://scholar.google.co.il/citations?user=N1uBekcAAAAJ&hl=en">Google Scholar</a>
                     &nbsp/&nbsp
                     <a href="https://www.linkedin.com/in/zifeng-wang-21b069b4/">LinkedIn</a> &nbsp/&nbsp
@@ -184,8 +186,8 @@
                   <heading>Research</heading>
                   <p>
                   <ul>
+                    <li> Large language model (LLM) Alignment</li>
                     <li> Continual (Lifelong) learning </li>
-                    <li> Data and parameter efficient learning for large language models (LLMs)</li>
                     <li> Open set recognition / novel class discovery </li>
                     <li> Adversarial robustness and model compression </li>
                     <li> Deep learning applications in computer vision, natural language understanding, document
