--- a/index.html
+++ b/index.html
@@ -300,6 +300,33 @@
 
             <tr>
               <td width="32%">
+                <img class="thumbnail" src="paper_images/chain-of-table.png" data-id="qf-carousel"></img>
+                <div id="qf-carousel" class="carousel">
+                  <img class="img-center-carousel" src="paper_images/chain-of-table.png" alt="">
+                  <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
+                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                </div>
+              </td>
+
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="">
+                  <papertitle>Chain-of-Table: Evolving Tables in the Reasoning Chain for Table Understanding
+                  </papertitle>
+                </a>
+                <br>
+                Zilong Wang, Hao Zhang, Chun-Liang Li, Julian Martin Eisenschlos, Vincent Perot, <b>Zifeng Wang</b>, Lesly Miculicich, Yasuhisa Fujii, Jingbo Shang, Chen-Yu Lee, Tomas Pfister
+                  <br>
+                <em> International Conference on Learning Representations (<b>ICLR</b>), 2024. <br> </em>
+                [<a href="https://arxiv.org/pdf/2401.04398.pdf">paper</a>]
+                <br>
+                <p></p>
+                <p> CHAIN-OF-TABLE enhances the reasoning capability of LLMs by leveraging tabular structures to express intermediate thoughts for table-based reasoning. It instructs LLMs to dynamically plan an operation chain according to the input table and its associated question. </p>
+              </td>
+            </tr>
+
+
+            <tr>
+              <td width="32%">
                 <img class="thumbnail" src="paper_images/queryform.png" data-id="qf-carousel"></img>
                 <div id="qf-carousel" class="carousel">
                   <img class="img-center-carousel" src="paper_images/queryform.png" alt="">
@@ -343,7 +370,7 @@
                 <b>Zifeng Wang*</b>, Zheng Zhan*, Yifan Gong, Yucai Shao, Stratis Ioannidis, Yanzhi Wang, Jennifer
                 Dy<br>
                 <em>International Conference on Machine Learning (<b>ICML</b>), 2023. <br> </em>
-                [<a href="https://arxiv.org/pdf/2305.00380.pdf">paper</a>] [code to be released]
+                [<a href="https://arxiv.org/pdf/2305.00380.pdf">paper</a>][<a href="https://github.com/zhanzheng8585/DualHSIC">code</a>]
                 <!-- [<a href="">paper</a>] [<a
                   href="">code</a>] -->
                 <br>
