--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
               </td>
 
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="">
+                <a href="https://arxiv.org/pdf/2401.04398.pdf">
                   <papertitle>Chain-of-Table: Evolving Tables in the Reasoning Chain for Table Understanding
                   </papertitle>
                 </a>
@@ -336,7 +336,7 @@
               </td>
 
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="">
+                <a href="https://arxiv.org/pdf/2211.07730.pdf">
                   <papertitle>QueryForm: A Simple Zero-shot Form Entity Query Framework</papertitle>
                 </a>
                 <br>
@@ -363,7 +363,7 @@
               </td>
 
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="">
+                <a href="https://arxiv.org/pdf/2305.00380.pdf">
                   <papertitle>DualHSIC: HSIC-Bottleneck and Alignment for Continual Learning</papertitle>
                 </a>
                 <br>
@@ -392,7 +392,7 @@
               </td>
 
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="">
+                <a href="https://arxiv.org/pdf/2209.09476.pdf">
                   <papertitle>SparCL: Sparse Continual Learning on the Edge</papertitle>
                 </a>
                 <br>
