update new published papers

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 <br>
                 Wenda Xu, Rujun Han, <b>Zifeng Wang</b>, Long T. Le, Dhruv Madeka, Lei Li, William Yang Wang, Rishabh Agarwal, Chen-Yu Lee, Tomas Pfister
                   <br>
-                  Arxiv, 2024. <br> </em>
+                  International Conference on Learning Representations (<b>ICLR</b>), 2025. <br> </em>
                 [<a href="https://arxiv.org/abs/2410.11325.pdf">paper</a>]
                 <br>
                 <p></p>
@@ -373,11 +373,37 @@
                 <br>
                 Justin Chih-Yao Chen, <b>Zifeng Wang</b>, Hamid Palangi, Rujun Han, Sayna Ebrahimi, Long Le, Vincent Perot, Swaroop Mishra, Mohit Bansal, Chen-Yu Lee, Tomas Pfister
                   <br>
-                  Arxiv, 2024. <br> </em>
+                  The Nations of the Americas Chapter of the Association for Computational Linguistics <em> (<b>NAACL</b>), 2025. <br> </em>
                 [<a href="https://arxiv.org/abs/2411.19865.pdf">paper</a>]
                 <br>
                 <p></p>
-                <p> To LLMs to perform reverse thinking, we introduce Reverse-Enhanced Thinking (RevThink), a framework composed of data augmentation and learning objectives. RevThink outperforms a standard fine-tuning method trained on 10x more forward reasoning, it also exhibits strong generalization to out-of-distribution held-out datasets. </p>
+                <p> To enable LLMs to perform reverse thinking, we introduce Reverse-Enhanced Thinking (RevThink), a framework composed of data augmentation and learning objectives. RevThink outperforms a standard fine-tuning method trained on 10x more forward reasoning, it also exhibits strong generalization to out-of-distribution held-out datasets. </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td width="32%">
+                <img class="thumbnail" src="paper_images/speculativeRAG.png" data-id="qf-carousel"></img>
+                <div id="qf-carousel" class="carousel">
+                  <img class="img-center-carousel" src="paper_images/speculativeRAG.png" alt="">
+                  <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
+                      data-carousel-id="qf-carousel" class="carousel-close"></a>
+                </div>
+              </td>
+
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="https://arxiv.org/abs/2407.08223.pdf">
+                  <papertitle> Speculative RAG: Enhancing Retrieval Augmented Generation through Drafting
+                  </papertitle>
+                </a>
+                <br>
+                Zilong Wang, <b>Zifeng Wang</b>, Long Le, Huaixiu Steven Zheng, Swaroop Mishra, Vincent Perot, Yuwei Zhang, Anush Mattapalli, Ankur Taly, Jingbo Shang, Chen-Yu Lee, Tomas Pfister
+                  <br>
+                  International Conference on Learning Representations (<b>ICLR</b>), 2025. <br> </em>
+                [<a href="https://arxiv.org/abs/2407.08223.pdf">paper</a>][<a href="https://research.google/blog/speculative-rag-enhancing-retrieval-augmented-generation-through-drafting/">blog</a>]
+                <br>
+                <p></p>
+                <p> Speculative RAG is a framework that leverages a larger generalist LM to efficiently verify multiple RAG drafts produced in parallel by a smaller, distilled specialist LM. (A complementary strategy to the CaLM paper below from a very different perspective!) </p>
               </td>
             </tr>
 
@@ -407,31 +433,6 @@
               </td>
             </tr>
 
-            <tr>
-              <td width="32%">
-                <img class="thumbnail" src="paper_images/speculativeRAG.png" data-id="qf-carousel"></img>
-                <div id="qf-carousel" class="carousel">
-                  <img class="img-center-carousel" src="paper_images/speculativeRAG.png" alt="">
-                  <a href="javascript:void(0)"><img src="images/close-transparent.png" alt=""
-                      data-carousel-id="qf-carousel" class="carousel-close"></a>
-                </div>
-              </td>
-
-              <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2407.08223.pdf">
-                  <papertitle> Speculative RAG: Enhancing Retrieval Augmented Generation through Drafting
-                  </papertitle>
-                </a>
-                <br>
-                Zilong Wang, <b>Zifeng Wang</b>, Long Le, Huaixiu Steven Zheng, Swaroop Mishra, Vincent Perot, Yuwei Zhang, Anush Mattapalli, Ankur Taly, Jingbo Shang, Chen-Yu Lee, Tomas Pfister
-                  <br>
-                  Arxiv, 2024. <br> </em>
-                [<a href="https://arxiv.org/abs/2407.08223.pdf">paper</a>]
-                <br>
-                <p></p>
-                <p> Speculative RAG is a framework that leverages a larger generalist LM to efficiently verify multiple RAG drafts produced in parallel by a smaller, distilled specialist LM. (A complementary strategy to the CaLM paper below from a very different perspective!) </p>
-              </td>
-            </tr>
             
             <tr>
               <td width="32%">
